Fix portfolio item overflow clipping card shadows

--- a/style.css
+++ b/style.css
@@ -870,7 +870,7 @@ button[data-filter]:not(.active) {
 .portfolio .portfolio-item {
 	float: left;
 	margin: 0px;
-	overflow: hidden;
+	display: flow-root;
 }
 
 .portfolio .portfolio-item a {
